--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <script src="//code.angularjs.org/1.3.0-rc.2/angular-route.min.js"></script>
     <script src="//code.angularjs.org/1.3.0-rc.2/angular-resource.min.js"></script>
     <!-- own JS -->
+    <script src="config.js"></script>    
     <script src="app.js"></script>
     <script src="routes.js"></script>
     <script src="controllers.js"></script>
